# Zero-2-Pro

./: .gitattributes  .gitignore  .lychee.toml  .lycheeignore  .markdownlint-cli2.jsonc  .markdownlint.json  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NEXT_LEVEL_PLAN.md  README.md  mkdocs.yml  package-lock.json  package.json  setup-labels.sh  starter-issues.md  tsconfig.json
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.husky/: pre-commit
00-git-path/: README.md  TOC.md  git-01-intro.md  git-02-first-commit.md  git-03-branches-merges.md  git-04-remotes-github.md  git-05-rebase-conflicts.md  git-06-history-tools.md  git-07-advanced-workflows.md
01-web-development/: README.md  TOC.md  web-00-orientation.md  web-01-foundations-js.md  web-02-core-fullstack.md  web-03-project-spa-api.md  web-04-advanced-performance.md
02-python/: README.md  TOC.md  py-00-setup.md  py-01-foundations.md  py-02-core-tooling.md  py-03-project-cli.md  py-04-advanced-async-performance.md
03-java/: README.md  TOC.md  java-00-setup.md  java-01-foundations.md  java-02-core-rest.md  java-03-project-service.md  java-04-advanced-resilience.md
04-go/: README.md  TOC.md  go-00-setup.md  go-01-foundations.md  go-02-core-concurrency.md  go-03-project-service.md  go-04-advanced-concurrency.md
05-ai-ml/: README.md  TOC.md  ai-00-math-python.md  ai-01-classical-ml.md  ai-02-deeplearning-basics.md  ai-03-project-mlapp.md  (+1 more)
templates/python-cli/: README.md  pyproject.toml
templates/python-cli/src/app/: __init__.py  main.py
templates/python-cli/tests/: test_app.py
(+144 files in other folders)
